# web-scraping

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  create_staircase.py  docker-compose.yml  pyproject.toml  requirements.txt  sistema_consolidado.py
archive/: decipher_message.py  decipher_message_final.py  decipher_message_v2.py  decipher_message_v3.py  decipher_message_v4.py  decipher_message_v5.py
src/: algorithms.py  benchmarks.py  cli.py  config.py  decipher.py  scraper.py  staircase.py  storage.py  tools.py  validation.py
tests/: test_algorithms.py  test_decipher.py  test_scraper.py  test_staircase.py  test_storage.py  test_tools.py  test_validation.py
